// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`{"$typeof": Symbol(machinat.element), "props": [Object], "type": [Function EmailQuickReply]} match snapshot 1`] = `
Array [
  Object {
    "content_type": "user_email",
  },
]
`;

exports[`{"$typeof": Symbol(machinat.element), "props": [Object], "type": [Function LocationQuickReply]} match snapshot 1`] = `
Array [
  Object {
    "content_type": "location",
  },
]
`;

exports[`{"$typeof": Symbol(machinat.element), "props": [Object], "type": [Function PhoneQuickReply]} match snapshot 1`] = `
Array [
  Object {
    "content_type": "user_phone_number",
  },
]
`;

exports[`{"$typeof": Symbol(machinat.element), "props": [Object], "type": [Function QuickReply]} match snapshot 1`] = `
Array [
  Object {
    "content_type": "text",
    "image_url": undefined,
    "payload": "🥧",
    "title": "i want a pie",
  },
]
`;

exports[`{"$typeof": Symbol(machinat.element), "props": [Object], "type": [Function QuickReply]} match snapshot 2`] = `
Array [
  Object {
    "content_type": "text",
    "image_url": "http://cake.it",
    "payload": "🍰",
    "title": "a piece of cake",
  },
]
`;
